# rs

./: .gitignore  Cargo.toml  LICENSE
.github/workflows/: rust.yml
bigmac/: Cargo.toml
bigmac/src/: main.rs
drop-dir/: CHANGELOG.md  Cargo.toml  README.md
drop-dir/src/: lib.rs
ds/: Cargo.toml
ds/src/: lib.rs
ezxml/: .gitignore  Cargo.toml  README.md  build.rs  readme.template
ezxml/src/: error.rs  lib.rs
ezxml/src/parser/: chars.rs  element.rs  mod.rs  pi.rs
ezxml/src/structure/: mod.rs
ezxml/tests/: invalid_syntax.rs  manually_written_tests.rs  parse_tests.rs
test-dir/: Cargo.toml
test-dir/src/: lib.rs
webern-ezxml/: Cargo.toml
webern-ezxml/src/: error.rs  lib.rs
webern-ezxml/src/parser/: mod.rs
webern-ezxml/src/structure/: mod.rs
xdoc/: Cargo.toml
xdoc/src/: doc.rs  error.rs  lib.rs  node.rs  nodes.rs
xml-files/: Cargo.toml
xml-files/data/: ezfile.metadata.json  pi-stray-text.metadata.json  unescaped-angle.metadata.json
xml-files/src/: lib.rs  main.rs
xml-struct/: Cargo.toml
xml-struct/src/: doc.rs  lib.rs  node.rs  nodes.rs  ord_map.rs
xtest/: Cargo.toml
xtest/data/: angle-in-attribute-value.metadata.json  disabled.comment-before-declaration.xml  escapes.metadata.json  escapes.xml  ezfile.metadata.json  oxygen-project.xpr  unescaped-angle.metadata.json
xtest/src/: io.rs  lib.rs  main.rs  metadata.rs  xml_file.rs
