[package]
name = "ezxml"
version = "0.0.0"
authors = ["Matthew James Briggs <matthew.james.briggs@gmail.com>"]
edition = "2018"

[dependencies]
snafu = "0.6.2"
env_logger = "0.7.1"
log = "0.4.8"
xml-struct = { version = "0.0.0", path = "../xml-struct" }

[build-dependencies]
xml-files = {path = "../xml-files"}
cargo-readme = "3.2.0"

[dev-dependencies]
test-dir = {path = "../test-dir"}
xml-files = {path = "../xml-files"}