[package]
name = "ezxml"
version = "0.0.0"
authors = ["Matthew James Briggs <matthew.james.briggs@gmail.com>"]
edition = "2018"

[dependencies]
snafu = "0.6.2"
env_logger = "0.7.1"
log = "0.4.8"
xdoc = { version = "0.0.0", path = "../xdoc" }

[build-dependencies]
cargo-readme = "3.2.0"
xml-files = {path = "../xml-files"}

[dev-dependencies]
test-dir = {path = "../test-dir"}
xml-files = {path = "../xml-files"}